--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -1,5 +1,32 @@
 .Youtube {
 	figure {
-		background: yellowgreen;
+		background: #ddd;
+	}
+
+	article {
+		border-top: 1px solid #aaa;
+		padding: 20px 0px;
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: space-between;
+
+		h2 {
+			width: 18%;
+		}
+		.txt {
+			width: 38%;
+		}
+		.pic {
+			width: 40%;
+			height: 250px;
+			background: #000;
+			filter: saturate(0);
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+			}
+		}
 	}
 }
