--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron&family=Work+Sans:wght@200&display=swap');
+
 $tablet: 1179px;
 $mp: 539px;
 
