--- a/src/scss/sub/_youtube.scss
+++ b/src/scss/sub/_youtube.scss
@@ -12,15 +12,38 @@
 
 		h2 {
 			width: 18%;
+			font: normal 30px/1 'open sans';
+			color: #111;
 		}
 		.txt {
 			width: 38%;
+			display: flex;
+			flex-wrap: wrap;
+			align-content: space-between;
+
+			p {
+				font: 12px/1.2 'arial';
+				color: #888;
+				filter: saturate(0);
+			}
+
+			span {
+				font: 12px/1 'orbitron';
+				letter-spacing: 1px;
+				color: orange;
+			}
 		}
 		.pic {
 			width: 40%;
-			height: 250px;
+			height: 200px;
 			background: #000;
 			filter: saturate(0);
+			cursor: pointer;
+			transition: 1s;
+
+			&:hover {
+				filter: saturate(1.2);
+			}
 
 			img {
 				width: 100%;
