--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@ $mp: 539px;
 @import 'common/header';
 @import 'common/footer';
 @import 'common/layout';
+@import 'common/popup';
 
 //main
 @import 'main/visual';
