위치 버튼 클릭시 지도화면 갱신

--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -8,4 +8,33 @@
 		height: 400px;
 		background: #111;
 	}
+
+	.btnSet {
+		margin-top: 20px;
+		display: flex;
+		justify-content: space-between;
+
+		button {
+			cursor: pointer;
+			height: 30px;
+			border: 1px solid #888;
+			padding: 5px 20px;
+			font: 14px/1 'arial';
+			color: #555;
+		}
+
+		ul {
+			display: flex;
+
+			li {
+				cursor: pointer;
+				border: 1px solid #888;
+				height: 30px;
+				padding: 5px 20px;
+				font: 14px/1 'arial';
+				color: #555;
+				margin: 0px 5px;
+			}
+		}
+	}
 }
