--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -34,6 +34,13 @@
 				font: 14px/1 'arial';
 				color: #555;
 				margin: 0px 5px;
+				transition: 0.5s;
+
+				&.on {
+					background: #555;
+					border: 1px solid #555;
+					color: #fff;
+				}
 			}
 		}
 	}
