지도 리사이즈시 마커 가운데 유지

--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -14,7 +14,7 @@
 		position: relative;
 		transform: translateY(100px);
 		opacity: 0;
-		transition: 1s;
+		transition: opacity 1s, transform 1s;
 
 		h1 {
 			font: bold 70px/1 'work sans';
