--- a/src/scss/sub/_location.scss
+++ b/src/scss/sub/_location.scss
@@ -31,7 +31,7 @@
 				border: 1px solid #888;
 				height: 30px;
 				padding: 5px 20px;
-				font: 14px/1 'arial';
+				font: 14px/1 '맑은 고딕';
 				color: #555;
 				margin: 0px 5px;
 				transition: 0.5s;
