--- a/src/scss/sub/_join.scss
+++ b/src/scss/sub/_join.scss
@@ -32,6 +32,12 @@
 				padding: 6px 20px;
 				width: 40%;
 			}
+
+			.err {
+				font: 11px/1 '맑은 고딕';
+				color: hotpink;
+				margin-left: 20px;
+			}
 		}
 	}
 }
