라디오버튼 스타일링

--- a/src/scss/sub/_join.scss
+++ b/src/scss/sub/_join.scss
@@ -33,6 +33,14 @@
 				width: 40%;
 			}
 
+			label {
+				margin-right: 4px;
+			}
+			input[type='radio'],
+			input[type='checkbox'] {
+				margin-right: 30px;
+			}
+
 			.err {
 				font: 11px/1 '맑은 고딕';
 				color: hotpink;
