select요소 인증 처리

--- a/src/scss/sub/_join.scss
+++ b/src/scss/sub/_join.scss
@@ -21,7 +21,7 @@
 				input[type='submit'],
 				input[type='reset'] {
 					width: 150px;
-					height: 30px;
+					height: 36px;
 					border: none;
 					background: #333;
 					display: inline-flex;
@@ -47,6 +47,7 @@
 
 			input[type='text'],
 			input[type='password'],
+			select,
 			textarea {
 				border: 1px solid #aaa;
 				padding: 8px 20px;
