기본 ui스타일링

--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -2,4 +2,57 @@
 	figure {
 		background: lightsalmon;
 	}
+
+	> .inner {
+		.inputBox {
+			border: 1px solid #bbb;
+			padding: 50px;
+			margin-bottom: 50px;
+
+			input[type='text'],
+			textarea {
+				width: 50%;
+				padding: 8px 10px;
+				border: 1px solid #aaa;
+				margin-bottom: 20px;
+				resize: none;
+			}
+			.btnSet {
+				button {
+					width: 150px;
+					height: 30px;
+					display: inline-flex;
+					justify-content: center;
+					align-items: center;
+					border: none;
+					background: #555;
+					color: #fff;
+					cursor: pointer;
+					margin-right: 20px;
+				}
+			}
+		}
+
+		.showBox {
+			border: 1px solid #bbb;
+			padding: 50px;
+
+			article {
+				background: #fff;
+				padding: 30px;
+				margin-bottom: 40px;
+				display: flex;
+				justify-content: space-between;
+
+				.txt {
+					width: 60%;
+				}
+				.butSet {
+					display: flex;
+					align-items: center;
+					width: 35%;
+				}
+			}
+		}
+	}
 }
