수정버튼 클릭한 순번의 포르트정보만 수정관련 key값 추가

--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -39,7 +39,7 @@
 
 			article {
 				background: #fff;
-				padding: 30px;
+				padding: 30px 40px;
 				margin-bottom: 40px;
 				display: flex;
 				flex-wrap: wrap;
