포스트 수정, 출력모드 분기처리

--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -48,6 +48,15 @@
 
 				.txt {
 					width: 75%;
+
+					input,
+					textarea {
+						width: 70%;
+						border: 1px solid #bbb;
+						padding: 8px 12px;
+						margin-bottom: 10px;
+						resize: none;
+					}
 				}
 				.btnSet {
 					display: flex;
