반응형 처리

--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -3,7 +3,8 @@
 	height: 100vh;
 	display: flex;
 	justify-content: center;
-	align-items: center;
+	flex-wrap: wrap;
+	align-content: center;
 	font-size: 10vw;
 
 	article {
@@ -21,6 +22,25 @@
 		p {
 			font: 12px/1.2 'arial';
 			color: #777;
+		}
+	}
+}
+
+@media screen and (max-width: $tablet) {
+	#news {
+		padding: 0px 30px;
+
+		article {
+			width: 48%;
+			margin-bottom: 30px;
+		}
+	}
+}
+
+@media screen and (max-width: $mp) {
+	#news {
+		article {
+			width: 100%;
 		}
 	}
 }
