--- a/src/scss/sub/_community.scss
+++ b/src/scss/sub/_community.scss
@@ -88,3 +88,54 @@
 		}
 	}
 }
+
+@media screen and (max-width: $tablet) {
+	.Community {
+		> .inner {
+			.inputBox {
+				input[type='text'],
+				textarea {
+					width: 100%;
+				}
+				.btnSet {
+					display: flex;
+					justify-content: space-between;
+
+					button {
+						width: 48%;
+						margin-right: 0px;
+					}
+				}
+			}
+
+			.showBox {
+				article {
+					.txt {
+						width: 100%;
+
+						input,
+						textarea {
+							width: 100%;
+						}
+					}
+					.btnSet {
+						width: 100%;
+						justify-content: space-between;
+						margin-top: 40px;
+
+						button {
+							margin-left: 0px;
+							width: 48%;
+
+							&:hover {
+								border: 1px solid #333;
+								background: #333;
+								color: orange;
+							}
+						}
+					}
+				}
+			}
+		}
+	}
+}
