메인컴포넌트 추가

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,8 @@ $mp: 539px;
 //main
 @import 'main/visual';
 @import 'main/news';
+@import 'main/pics';
+@import 'main/vids';
 
 //sub
 @import 'sub/department';
