각 섹션의 세로 위치값을 useRef로 참조하고 자식 Btn컴포넌트에서 이벤트 발생시 부모 컴포넌트의 Index state값 변경

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@ $mp: 539px;
 @import 'main/news';
 @import 'main/pics';
 @import 'main/vids';
+@import 'main/btns';
 
 //sub
 @import 'sub/department';
