버튼 클릭시 해당 위치로 브라우저 스크롤

--- a/src/scss/main/_btns.scss
+++ b/src/scss/main/_btns.scss
@@ -7,7 +7,7 @@
 	li {
 		width: 10px;
 		height: 10px;
-		border: 1px solid i#111;
+		border: 1px solid #111;
 		background: #fff;
 		margin: 20px;
 		cursor: pointer;
