--- a/src/scss/common/_header.scss
+++ b/src/scss/common/_header.scss
@@ -3,6 +3,10 @@ header {
 	background: #fff;
 	border-bottom: 1px solid #999;
 
+	&.main {
+		border-bottom: 1px solid #fff;
+	}
+
 	.inner {
 		width: 1180px;
 		height: 80px;
