--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -1,11 +1,97 @@
 #visual {
 	width: 100%;
 	height: 100vh;
-	background: #333;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+	position: relative;
 
-	font-size: 10vw;
-	color: #fff;
+	#slider {
+		width: 100%;
+		height: 100%;
+		position: relative;
+		overflow: hidden;
+
+		.panel {
+			width: 100%;
+			height: 100%;
+			position: relative;
+
+			> li {
+				width: 100%;
+				height: 100%;
+				position: absolute;
+				top: 0;
+				left: 0;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				display: none;
+
+				&.on {
+					display: flex;
+				}
+
+				&.s1 {
+					background: darkorchid;
+				}
+				&.s2 {
+					background: hotpink;
+				}
+				&.s3 {
+					background: orange;
+				}
+				&.s4 {
+					background: cornflowerblue;
+				}
+				&.s5 {
+					background: darkseagreen;
+				}
+
+				span {
+					font-size: 100px;
+					color: #fff;
+				}
+			}
+		}
+
+		.navi {
+			position: absolute;
+			bottom: 10vh;
+			left: 10vw;
+
+			li {
+				float: left;
+				margin-right: 10px;
+				width: 50px;
+				height: 4px;
+				background: #fff;
+				cursor: pointer;
+				transition: 0.5s;
+
+				&.on {
+					background: #222;
+					width: 150px;
+				}
+			}
+		}
+
+		.prev {
+			border: none;
+			width: 30px;
+			height: 30px;
+			background: #fff;
+			position: absolute;
+			bottom: 10vh;
+			right: calc(5vw + 50px);
+			cursor: pointer;
+		}
+		.next {
+			border: none;
+			width: 30px;
+			height: 30px;
+			background: #fff;
+			position: absolute;
+			bottom: 10vh;
+			right: 5vw;
+			cursor: pointer;
+		}
+	}
 }
