--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -1,10 +1,25 @@
 #vids {
 	width: 100%;
 	height: 100vh;
-	background: lightblue;
+	background: #222;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	font-size: 10vw;
 	color: #555;
+	padding: 200px 0px;
+
+	.swiper {
+		height: 100%;
+
+		.swiper-slide {
+			width: 100%;
+			background: aqua;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			font-size: 50px;
+			color: #fff;
+		}
+	}
 }
