--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -14,12 +14,25 @@
 
 		.swiper-slide {
 			width: 100%;
-			background: aqua;
-			display: flex;
-			justify-content: center;
-			align-items: center;
-			font-size: 50px;
-			color: #fff;
+
+			.inner {
+				width: 100%;
+				height: 100%;
+				background: aqua;
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				font-size: 50px;
+				color: #fff;
+				opacity: 0.5;
+				transform: scale(0.8);
+				transition: opacity 0.5s, transform 0.5s;
+			}
+
+			&.swiper-slide-active .inner {
+				opacity: 1;
+				transform: scale(1);
+			}
 		}
 	}
 }
