swiper 반응형, 버튼 스타일 수정

--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -5,12 +5,14 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	font-size: 10vw;
 	color: #555;
-	padding: 200px 0px;
+	padding: 0;
+	position: relative;
 
 	.swiper {
 		height: 100%;
+		padding: 200px 0px;
+		//overflow: visible;
 
 		.swiper-slide {
 			width: 100%;
@@ -32,6 +34,42 @@
 			&.swiper-slide-active .inner {
 				opacity: 1;
 				transform: scale(1);
+			}
+		}
+
+		.swiper-button-next {
+			top: auto;
+			bottom: 4vh;
+			right: 5vw;
+			transform: scale(0.6);
+			filter: brightness(4) saturate(0);
+		}
+		.swiper-button-prev {
+			top: auto;
+			bottom: 4vh;
+			left: auto;
+			right: calc(5vw + 50px);
+			transform: scale(0.6);
+			filter: brightness(4) saturate(0);
+		}
+
+		.swiper-pagination {
+			width: auto;
+			height: auto;
+			left: 50%;
+			bottom: 50px;
+			transform: translateX(-50%);
+
+			.swiper-pagination-bullet {
+				background: #fff;
+				opacity: 0.7;
+				border-radius: 4px;
+				transition: width 0.5s;
+			}
+			.swiper-pagination-bullet-active {
+				width: 100px;
+				opacity: 1;
+				background: aqua;
 			}
 		}
 	}
