--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -2,4 +2,41 @@
 	figure {
 		background: lightskyblue;
 	}
+
+	ul {
+		width: 100%;
+
+		&::after {
+			content: '';
+			display: block;
+			clear: both;
+		}
+
+		li {
+			width: 25%;
+			float: left;
+			padding: 10px;
+
+			> .inner {
+				width: 100%;
+				background: #fff;
+				padding: 10px;
+				box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.1);
+
+				.pic {
+					width: 100%;
+					img {
+						width: 100%;
+					}
+				}
+
+				h2 {
+					font: normal 14px/1.2 'arial';
+					color: #777;
+					margin-top: 10px;
+					margin-bottom: 20px;
+				}
+			}
+		}
+	}
 }
