인수로 메서드명에 따라 갤러리 데이터 반환하도록 함수 수정

--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -5,6 +5,14 @@
 
 	ul {
 		width: 100%;
+		transform: translateY(100px);
+		opacity: 0;
+		transition: 1s;
+
+		&.on {
+			opacity: 1;
+			transform: translateY(0px);
+		}
 
 		&::after {
 			content: '';
