--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -1,12 +1,20 @@
 .Gallery {
+	.loading {
+		position: absolute;
+		top: 0px;
+		left: 50%;
+		transform: translateX(-50%);
+		z-index: 0;
+	}
 	figure {
 		background: lightskyblue;
 	}
 
-	> div {
+	article {
 		transform: translateY(100px);
 		opacity: 0;
 		transition: 1s;
+
 		&.on {
 			opacity: 1;
 			transform: translateY(0px);
