반응형 구현

--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -57,3 +57,21 @@
 		}
 	}
 }
+
+@media screen and (max-width: 1179px) {
+	.Gallery article ul li {
+		width: 33.333%;
+	}
+}
+
+@media screen and (max-width: 779px) {
+	.Gallery article ul li {
+		width: 50%;
+	}
+}
+
+@media screen and (max-width: 639px) {
+	.Gallery article ul li {
+		width: 100%;
+	}
+}
