사용자 프로필 정보 출력

--- a/src/scss/sub/_gallery.scss
+++ b/src/scss/sub/_gallery.scss
@@ -52,6 +52,26 @@
 						margin-top: 10px;
 						margin-bottom: 20px;
 					}
+
+					.profile {
+						display: flex;
+						align-items: center;
+
+						img {
+							width: 40px;
+							border-radius: 50%;
+							margin-right: 10px;
+						}
+						span {
+							cursor: pointer;
+							font: 12px/1 'arial';
+							color: orange;
+							transition: 0.5s;
+							&:hover {
+								color: aqua;
+							}
+						}
+					}
 				}
 			}
 		}
