--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -73,4 +73,19 @@
 			}
 		}
 	}
+
+	.cursor {
+		width: 50px;
+		height: 50px;
+		background: #fff;
+		position: fixed;
+		border-radius: 50%;
+		top: -99999px;
+		left: 0;
+		z-index: 5;
+		transform: translate(-50%, -50%);
+		pointer-events: none;
+		mix-blend-mode: difference;
+		transition: transform 0.3s;
+	}
 }
