--- a/src/scss/main/_news.scss
+++ b/src/scss/main/_news.scss
@@ -8,6 +8,24 @@
 	font-size: 10vw;
 	perspective: 600px;
 
+	ul {
+		display: flex;
+		width: 100%;
+
+		li {
+			.pic {
+				width: 50px;
+				height: 50px;
+
+				img {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+			}
+		}
+	}
+
 	article {
 		width: 15%;
 		min-height: 180px;
