--- a/src/scss/main/_vids.scss
+++ b/src/scss/main/_vids.scss
@@ -21,14 +21,20 @@
 				width: 100%;
 				height: 100%;
 				background: aqua;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				font-size: 50px;
-				color: #fff;
 				opacity: 0.5;
 				transform: scale(0.8);
 				transition: opacity 0.5s, transform 0.5s;
+
+				.pic {
+					width: 100%;
+					height: 100%;
+
+					img {
+						width: 100%;
+						height: 100%;
+						object-fit: cover;
+					}
+				}
 			}
 
 			&.swiper-slide-active .inner {
