--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -9,6 +9,8 @@
 	color: #555;
 	position: relative;
 	overflow: hidden;
+	gap: 20px;
+	padding: 0px 150px;
 
 	p {
 		font: bold 200px/1 'arial';
@@ -25,5 +27,17 @@
 		top: 160px;
 		left: 100px;
 		text-shadow: 20px 20px 50px rgba(0, 0, 0, 0.4);
+	}
+
+	.pic {
+		width: 18%;
+		height: 150px;
+		overflow: hidden;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 }
