--- a/src/scss/main/_pics.scss
+++ b/src/scss/main/_pics.scss
@@ -3,8 +3,9 @@
 	height: 100vh;
 	background: lightgreen;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: center;
-	align-items: center;
+	align-content: center;
 	font-size: 10vw;
 	color: #555;
 	position: relative;
