모바일 패널 스타일링

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@ $mp: 539px;
 @import 'common/footer';
 @import 'common/layout';
 @import 'common/popup';
+@import 'common/menu';
 
 //main
 @import 'main/visual';
