토글메뉴 완성

--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -46,7 +46,7 @@
 //table
 @media screen and (max-width: $tablet) {
 	.content {
-		figre {
+		figure {
 			height: 200px;
 		}
 		> .inner {
@@ -60,7 +60,7 @@
 //mp
 @media screen and (max-width: $mp) {
 	.content {
-		figre {
+		figure {
 			height: 150px;
 		}
 	}
