--- a/src/scss/common/_layout.scss
+++ b/src/scss/common/_layout.scss
@@ -5,6 +5,12 @@
 		background: gray;
 		opacity: 0;
 		transition: 2s;
+
+		img {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
 	}
 
 	> .inner {
