--- a/src/scss/main/_visual.scss
+++ b/src/scss/main/_visual.scss
@@ -25,12 +25,18 @@
 				align-items: center;
 				display: none;
 
+				video {
+					width: 100%;
+					height: 100%;
+					object-fit: cover;
+				}
+
 				&.on {
 					display: flex;
 				}
 
 				&.s1 {
-					background: darkorchid;
+					background: black;
 				}
 				&.s2 {
 					background: hotpink;
